# rpi-cff-display

./: .gitignore  README.md  update_display.bash
.github/workflows/: python-app.yml  rust.yml
api_fetcher/: .env.example  Cargo.toml  api_result_test.tsv  geneve_cornavin_test.json  zurich_hb_test.json
api_fetcher/src/: main.rs
display_controller/: __init__.py  __main__.py  requirements.txt  tests.py
display_controller/lib/: __init__.py
display_controller/lib/waveshare_epd/: epd13in3b.py  epd13in3k.py  epd1in02.py  epd1in54.py  epd1in54_V2.py  epd2in13.py  epd2in13_V2.py  epd2in13_V3.py  epd2in13_V4.py  epd2in13b_V4.py  epd2in13g.py  epd2in7_V2.py  epd2in9.py  epd2in9_V2.py  epd2in9b_V4.py  epd3in52.py  epd4in2.py  epd4in26.py  epd4in2_V2.py  epd5in79.py  epd5in79b.py  epd7in3f.py  epd7in5_HD.py  epd7in5_V2.py  epd7in5_V2_old.py  epd7in5b_HD.py  epd7in5b_V2.py  epdconfig.py
display_controller/waveshare_epd/: epdconfig.py
