[package]
name = "api_fetcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
reqwest = { version = "0.12.3", features = ["json", "blocking"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
